[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/enemy1/ranged.gd" type="Script" id=1]
[ext_resource path="res://Resources/Sprites/waffly_sheet2.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]

resource_name = "dead"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=2]

resource_name = "moving"
length = 4.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 6, 7, 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "atirar"
} ]
}

[sub_resource type="Animation" id=3]

resource_name = "moving_soum"
length = 0.6
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 5, 5 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 6, 6 )

[node name="ranged" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="animation_player" type="AnimationPlayer" parent="." index="0"]

root_node = NodePath("..")
autoplay = "moving"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/dead = SubResource( 1 )
anims/moving = SubResource( 2 )
anims/moving_soum = SubResource( 3 )
blend_times = [  ]

[node name="sprite" type="Sprite" parent="." index="1"]

texture = ExtResource( 2 )
vframes = 2
hframes = 5
frame = 2
_sections_unfolded = [ "Animation", "Offset", "Transform" ]

[node name="collision_shape_2d" type="CollisionShape2D" parent="." index="2"]

shape = SubResource( 4 )

[node name="area_2d" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="collision_shape_2d" type="CollisionShape2D" parent="area_2d" index="0"]

shape = SubResource( 5 )

[node name="tween_dead_x" type="Tween" parent="." index="4"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="tween_dead_y" type="Tween" parent="." index="5"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="tween_dead_rotacao" type="Tween" parent="." index="6"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="snd_shot" type="AudioStreamPlayer2D" parent="." index="7"]

stream = null
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "sfx"
area_mask = 1

[connection signal="body_entered" from="area_2d" to="." method="_on_area_2d_body_entered"]

[connection signal="tween_completed" from="tween_dead_y" to="." method="_on_tween_dead_y_tween_completed"]


